// Generated from MySQL database: bt3wljbwprykeblz7tvq
// Filter: tables referenced by SQL in backend/src

Table activity_logs {
  log_id int [pk]
  user_id int [not null]
  action varchar(255)
  module varchar(100)
  description text
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
}

Table attendance {
  attendance_id int [pk]
  attendance_code varchar(10) [unique]
  employee_id int [not null]
  date date
  time_in datetime
  time_out datetime
  status enum('present','absent','late','early_leave','half_day','on_leave','work_from_home','overtime','others') [not null, default: 'present']
  overtime_hours decimal(5,2) [default: 0.00]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table budget {
  budget_id int [pk]
  user_id int
  department_id int
  budget_name varchar(100) [not null]
  start_date date
  end_date date
  description text
  period_type enum('Monthly','Quarterly','Yearly')
  status varchar(20) [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  created_by int
  is_archived tinyint(1) [not null, default: 0]
  total_category_amount decimal(15,2) [not null, default: 0.00]
  total_department_allocated decimal(15,2) [not null, default: 0.00]
}

Table budget_department {
  department_budget_id int [pk]
  budget_id int [not null]
  department_id int [not null]
  allocated_amount decimal(12,2) [not null, default: 0.00]
  notes text
  is_active tinyint(1) [not null, default: 1]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (budget_id, department_id) [unique, name: 'uq_dept_budget']
  }
}

Table departments {
  department_id int [pk]
  department_code varchar(10) [unique]
  department_name varchar(100) [not null, unique]
  description text
  supervisor_id int
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table dependant_address {
  dependant_address_id int [pk]
  dependant_id int [unique]
  region_name varchar(100)
  province_name varchar(50)
  city_name varchar(50)
  home_address varchar(255)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table dependant_contact {
  dependant_contact_id int [pk]
  dependant_id int [unique]
  contact_no varchar(25)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table dependant_email {
  dependant_email_id int [pk]
  dependant_id int [unique]
  email varchar(100)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table dependants {
  dependant_id int [pk]
  dependant_code varchar(10) [unique]
  employee_id int [not null]
  firstname varchar(100)
  lastname varchar(100)
  relationship varchar(100)
  birth_date date
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table employee_addresses {
  address_id int [pk]
  employee_id int [unique]
  region_name varchar(100)
  province_name varchar(100)
  city_name varchar(100)
  barangay_name varchar(100)
  home_address varchar(255)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table employee_contact_numbers {
  contact_id int [pk]
  employee_id int [not null]
  contact_number varchar(20)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table employee_documents {
  document_id int [pk]
  employee_id int [not null, unique]
  sss bit(1) [default: 0]
  pag_ibig bit(1) [default: 0]
  tin bit(1) [default: 0]
  philhealth bit(1) [default: 0]
  cedula bit(1) [default: 0]
  birth_cert bit(1) [default: 0]
  police_clearance bit(1) [default: 0]
  barangay_clearance bit(1) [default: 0]
  medical_cert bit(1) [default: 0]
  others bit(1) [default: 0]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table employee_emails {
  email_id int [pk]
  employee_id int [not null]
  email varchar(100)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table employee_penalties {
  id bigint [pk]
  employee_id int [not null]
  issued_by_user_id int
  code varchar(50) [not null, unique]
  penalty_type varchar(100) [not null]
  title varchar(255) [not null]
  description text [not null]
  amount decimal(14,2) [not null, default: 0.00]
  amount_deducted decimal(14,2) [not null, default: 0.00]
  remaining_amount decimal(14,2) [not null, default: 0.00]
  currency varchar(10) [not null, default: 'PHP']
  incident_date date [not null]
  issued_date date [not null]
  due_date date
  status enum('draft','pending','approved','rejected','settled','cancelled','waived') [not null, default: 'pending']
  payroll_deduction_mode enum('full','next_payroll','installment','manual','none') [not null, default: 'none']
  installment_count int
  installment_frequency varchar(30)
  settled_at datetime
  cancelled_at datetime
  cancellation_reason varchar(255)
  metadata json
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table employee_penalty_events {
  id bigint [pk]
  penalty_id bigint [not null]
  action_type varchar(80) [not null]
  from_status varchar(30)
  to_status varchar(30)
  notes text
  action_by_user_id int
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table employee_positions {
  id int [pk]
  employee_id int [not null]
  position_id int [not null]
  salary decimal(12,2)
  salary_unit varchar(16) [not null, default: 'monthly']
  is_primary tinyint(1) [not null, default: 0]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (employee_id, position_id) [unique, name: 'uq_emp_pos']
  }
}

Table employees {
  employee_id int [pk]
  employee_code varchar(10) [unique]
  user_id int [unique]
  fingerprint_id int [unique]
  first_name varchar(100) [not null]
  last_name varchar(100) [not null]
  middle_name varchar(100)
  extension_name varchar(10)
  birthdate date
  gender enum('male','female','others') [not null, default: 'others']
  civil_status enum('single','married','divorced','widowed') [default: 'single']
  position_id int
  department_id int
  hire_date date
  leave_credit int [default: 15]
  supervisor_id int
  status enum('active','resigned','terminated','on-leave') [default: 'active']
  terminated_at datetime
  terminated_by_user_id int
  termination_reason varchar(255)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  employment_type enum('regular','probationary') [not null, default: 'probationary']
  probation_end_date date
  current_salary decimal(12,2)
  salary_unit varchar(16)
  work_type enum('full-time','part-time') [not null, default: 'full-time']
  scheduled_days json [not null]
  scheduled_start_time time [not null]
  scheduled_end_time time [not null]
}

Table expense_notifications {
  notification_id int [pk]
  department_id int
  external_reference_id varchar(100)
  title varchar(150) [not null]
  description text
  requested_amount decimal(10,2) [not null]
  budget_category_id int
  requested_by varchar(255)
  purpose text
  priority enum('low','medium','high') [default: 'medium']
  vendor_supplier varchar(100)
  due_date date
  revenue_category_id int
  attachment_filename varchar(255)
  attachment_file_path varchar(255)
  status enum('pending','accepted','rejected','cancelled') [not null, default: 'pending']
  reviewed_by int
  rejection_reason text
  reviewed_at timestamp
  expense_id int [unique]
  created_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [not null, default: `CURRENT_TIMESTAMP`]
  is_active tinyint [not null, default: 1]
}

Table job_positions {
  position_id int [pk]
  position_name varchar(100) [not null]
  position_code varchar(10) [unique]
  position_desc varchar(255)
  department_id int [not null]
  salary decimal(10,2)
  availability int [default: 0]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
  employment_type varchar(16) [not null, default: 'regular']
  default_salary decimal(12,2)
  salary_unit varchar(16) [not null, default: 'monthly']
}

Table leaves {
  leave_id int [pk]
  leave_code varchar(10) [unique]
  employee_id int [not null]
  leave_type enum('vacation','sick','emergency','personal','parental','bereavement','half_day','others')
  start_date date
  end_date date
  status enum('pending','approved','rejected','cancelled') [default: 'pending']
  remarks text
  supporting_docs text
  supervisor_approved_by int
  supervisor_approved_at datetime
  approved_by int
  hr_approved_by int
  hr_approved_at datetime
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

Table password_reset_otps {
  otp_id int [pk]
  user_id int [not null]
  identifier varchar(255) [not null]
  purpose varchar(50) [not null]
  code_hash varchar(255) [not null]
  delivery_channel varchar(50) [default: 'email']
  expires_at datetime [not null]
  consumed_at datetime
  attempts int [default: 0]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table password_reset_tokens {
  token_id int [pk]
  user_id int [not null]
  token_hash varchar(255) [not null]
  expires_at datetime [not null]
  consumed_at datetime
  created_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table payroll_contributions {
  id bigint [pk]
  record_id bigint [not null]
  employee_id int [not null]
  sss_ee decimal(14,2) [not null, default: 0.00]
  sss_er decimal(14,2) [not null, default: 0.00]
  philhealth_ee decimal(14,2) [not null, default: 0.00]
  philhealth_er decimal(14,2) [not null, default: 0.00]
  pagibig_ee decimal(14,2) [not null, default: 0.00]
  pagibig_er decimal(14,2) [not null, default: 0.00]
  bir_withholding decimal(14,2) [not null, default: 0.00]
  period_start date [not null]
  period_end date [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table payroll_penalty_deductions {
  id bigint [pk]
  penalty_id bigint [not null]
  payroll_run_id bigint [not null]
  payroll_record_id bigint [not null]
  employee_id int [not null]
  deducted_amount decimal(14,2) [not null, default: 0.00]
  deduction_date date [not null]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (penalty_id, payroll_run_id, payroll_record_id) [unique, name: 'uq_payroll_penalty_deduction_unique']
  }
}

Table payroll_records {
  id bigint [pk]
  run_id bigint [not null]
  employee_id int [not null]
  gross_pay decimal(14,2) [not null, default: 0.00]
  total_deductions decimal(14,2) [not null, default: 0.00]
  withholding_tax decimal(14,2) [not null, default: 0.00]
  net_pay decimal(14,2) [not null, default: 0.00]
  json_breakdown json
  payslip_data json
  raw_inputs json
  override_meta json
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (run_id, employee_id) [unique, name: 'uq_payroll_record_run_employee']
  }
}

Table payroll_runs {
  id bigint [pk]
  pay_period_start date [not null]
  pay_period_end date [not null]
  pay_schedule enum('weekly','semi-monthly','monthly') [not null, default: 'semi-monthly']
  status enum('draft','finalized') [not null, default: 'draft']
  employee_scope json
  notes text
  created_by int
  finalized_by int
  finalized_at datetime
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table payroll_settings {
  id int [pk]
  pay_schedule enum('weekly','semi-monthly','monthly') [not null, default: 'semi-monthly']
  allowances_config json
  holiday_overrides json
  de_minimis_config json
  company_name varchar(255)
  monthly_work_days decimal(6,2) [not null, default: 22.00]
  effective_date date [not null]
  is_active tinyint(1) [not null, default: 1]
  created_by int
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]
}

Table permissions {
  permission_id int [pk]
  permission_key varchar(100) [not null, unique]
  description varchar(255) [not null]
  module varchar(50) [not null, default: 'general']
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table public_ticket_emails {
  id int [pk]
  ticket_id int [not null]
  email varchar(100)
  name varchar(100)
  created_at datetime [default: `CURRENT_TIMESTAMP`]
}

Table role_permissions {
  role_permission_id int [pk]
  role_id int [not null]
  permission_id int [not null]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (role_id, permission_id) [unique, name: 'uq_role_perm']
  }
}

Table roles {
  role_id int [pk]
  role_key varchar(50) [not null, unique]
  role_name varchar(100) [not null]
  description varchar(255)
  is_system tinyint(1) [not null, default: 0]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
}

Table tickets {
  ticket_id int [pk]
  ticket_code varchar(10) [unique]
  user_id int [not null]
  fixed_by int
  title varchar(100) [not null]
  description text
  resolution_description text
  status enum('open','in_progress','resolved','closed') [default: 'open']
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_by int
}

Table user_notifications {
  notification_id bigint [pk]
  recipient_user_id int [not null]
  actor_user_id int
  title varchar(255) [not null]
  message text [not null]
  category varchar(80) [not null, default: 'general']
  reference_module varchar(80)
  reference_id varchar(120)
  status enum('unread','read') [not null, default: 'unread']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  read_at datetime
}

Table user_role_assignments {
  assignment_id int [pk]
  user_id int [not null]
  role_id int [not null]
  assigned_by int
  created_at timestamp [default: `CURRENT_TIMESTAMP`]

  indexes {
    (user_id, role_id) [unique, name: 'uq_user_role']
  }
}

Table users {
  user_id int [pk]
  username varchar(50) [not null, unique]
  password varchar(255) [not null]
  role enum('employee','admin','supervisor','superadmin') [default: 'employee']
  is_active tinyint(1) [default: 1]
  created_at datetime [default: `CURRENT_TIMESTAMP`]
  updated_at datetime [default: `CURRENT_TIMESTAMP`]
  created_by int
  updated_by int
}

// Foreign key relationships (within filtered set)
Ref: activity_logs.user_id > users.user_id
Ref: attendance.employee_id > employees.employee_id
Ref: budget.department_id > departments.department_id
Ref: budget_department.budget_id > budget.budget_id
Ref: budget_department.department_id > departments.department_id
Ref: departments.supervisor_id > employees.employee_id
Ref: dependant_address.dependant_id > dependants.dependant_id
Ref: dependant_contact.dependant_id > dependants.dependant_id
Ref: dependant_email.dependant_id > dependants.dependant_id
Ref: dependants.employee_id > employees.employee_id
Ref: employee_contact_numbers.employee_id > employees.employee_id
Ref: employee_documents.employee_id > employees.employee_id
Ref: employee_emails.employee_id > employees.employee_id
Ref: employee_penalties.employee_id > employees.employee_id
Ref: employee_penalties.issued_by_user_id > users.user_id
Ref: employee_penalty_events.action_by_user_id > users.user_id
Ref: employee_penalty_events.penalty_id > employee_penalties.id
Ref: employee_positions.employee_id > employees.employee_id
Ref: employee_positions.position_id > job_positions.position_id
Ref: employees.user_id > users.user_id
Ref: employees.position_id > job_positions.position_id
Ref: employees.department_id > departments.department_id
Ref: employees.supervisor_id > employees.employee_id
Ref: employees.terminated_by_user_id > users.user_id
Ref: expense_notifications.reviewed_by > users.user_id
Ref: expense_notifications.department_id > departments.department_id
Ref: job_positions.department_id > departments.department_id
Ref: leaves.hr_approved_by > users.user_id
Ref: leaves.employee_id > employees.employee_id
Ref: leaves.approved_by > users.user_id
Ref: password_reset_otps.user_id > users.user_id
Ref: password_reset_tokens.user_id > users.user_id
Ref: payroll_contributions.record_id > payroll_records.id
Ref: payroll_penalty_deductions.employee_id > employees.employee_id
Ref: payroll_penalty_deductions.penalty_id > employee_penalties.id
Ref: payroll_penalty_deductions.payroll_record_id > payroll_records.id
Ref: payroll_penalty_deductions.payroll_run_id > payroll_runs.id
Ref: payroll_records.run_id > payroll_runs.id
Ref: public_ticket_emails.ticket_id > tickets.ticket_id
Ref: role_permissions.role_id > roles.role_id
Ref: role_permissions.permission_id > permissions.permission_id
Ref: tickets.user_id > users.user_id
Ref: tickets.fixed_by > users.user_id
Ref: tickets.created_by > users.user_id
Ref: tickets.updated_by > users.user_id
Ref: user_role_assignments.user_id > users.user_id
Ref: user_role_assignments.role_id > roles.role_id
Ref: user_role_assignments.assigned_by > users.user_id
